# surrealdb.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: query.rs  select.rs  transaction.rs
examples/query/: Cargo.toml
examples/select/: Cargo.toml
examples/transaction/: Cargo.toml
examples/version/: Cargo.toml
src/: authenticate.rs  begin.rs  cancel.rs  change.rs  commit.rs  content.rs  create.rs  delete.rs  embedded.rs  err.rs  export.rs  health.rs  http.rs  import.rs  info.rs  invalidate.rs  kill.rs  lib.rs  live.rs  modify.rs  net.rs  param.rs  patches.rs  protocol.rs  query.rs  select.rs  set.rs  signin.rs  signup.rs  update.rs  use_db.rs  use_ns.rs  version.rs  ws.rs
src/api/: embedded.rs  err.rs  mod.rs
src/api/method/: authenticate.rs  begin.rs  cancel.rs  commit.rs  content.rs  delete.rs  export.rs  import.rs  invalidate.rs  kill.rs  live.rs  merge.rs  mod.rs  patch.rs  select.rs  set.rs  signin.rs  signup.rs  update.rs  use_db.rs  version.rs
src/api/param/: mod.rs  query.rs  resource.rs
src/api/storage/: mod.rs  native.rs  (+1 more)
src/method/: authenticate.rs  begin.rs  cancel.rs  commit.rs  content.rs  create.rs  delete.rs  export.rs  health.rs  import.rs  invalidate.rs  kill.rs  live.rs  merge.rs  mod.rs  patch.rs  query.rs  select.rs  set.rs  signin.rs  signup.rs  unset.rs  update.rs  use_ns.rs  version.rs
src/param/: credentials.rs  jwt.rs  mod.rs  query.rs  resource.rs
src/protocol/: http.rs  mod.rs  ws.rs
src/storage/: mod.rs  native.rs  wasm.rs
tests/: native-http.rs  native-mem.rs  native-ws.rs  types.rs
(+37 files in other folders)
